fix overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body {
   font-family: var(--font-family);
   background-color: var(--color-bg);
   color: var(--color-secondary);
+  overflow: hidden;
 }
 
 nav {
